makes this a multi-modules maven project with separate API package